Initial file with integration of service

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,14 @@
 # BlueJ files
 *.ctxt
 
+# Netbean
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
+
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
