--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,13 +29,13 @@ dist.jar=${dist.dir}/ClothOrderingSystem.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.commons-codec-1.3.jar=lib\\commons-codec\\commons-codec-1.3.jar
+file.reference.commons-codec-1.10.jar=C:\\Users\\Wai Pai Lee\\Desktop\\JavaApplication4\\lib\\commons-codec-1.10.jar
 file.reference.jade.jar=lib\\jade.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.commons-codec-1.3.jar}:\
-    ${file.reference.jade.jar}
+    ${file.reference.jade.jar}:\
+    ${file.reference.commons-codec-1.10.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
