--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,12 +30,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.commons-codec-1.10.jar=C:\\Users\\Wai Pai Lee\\Desktop\\JavaApplication4\\lib\\commons-codec-1.10.jar
+file.reference.commons-codec-1.10.jar-1=lib\\commons-codec-1.10.jar
 file.reference.jade.jar=lib\\jade.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jade.jar}:\
-    ${file.reference.commons-codec-1.10.jar}
+    ${file.reference.commons-codec-1.10.jar}:\
+    ${file.reference.commons-codec-1.10.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
