--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,7 +37,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.jade.jar}:\
     ${file.reference.commons-codec-1.10.jar}:\
-    ${file.reference.commons-codec-1.10.jar-1}
+    ${file.reference.commons-codec-1.10.jar-1}:\
+    ${libs.JAVADB_DRIVER_LABEL.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
